--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
     "recharts": "^2.15.4",
+    "oidc-client-ts": "^2.5.1",
+    "react-oidc-context": "^2.1.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
